# clawdview

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: hmode-update.yml  npm-publish.yml
agents/: amplify-deploy-specialist.md  code-implementation-agent.md  design-evaluation-agent.md  documentation-agent.md  infra-sre-agent.md  planning-agent.md  requirements-validator.md  research-agent.md
agents/tests/: validate_design_output.py
clawdview-tool/: .gitignore  README.md  TEST_PLAN.md  claude-helpers.js  index.html  logo-concepts.html  package-lock.json  package.json  playwright.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
clawdview-tool/test-results/: .last-run.json
clawdview-tool/tests/: test-server.js
commands/: add-observability.md  add-sa-to-accounts.md  approval.md  ask-human.md  assemble-overview.md  audit-proposal.md  auto-merge.md  aws-cname.md  aws-inventory.md  brownfield-audit.md  c.md  cancel-ralph.md  check-core.md  cite.md  classify-projects.md  comms.md  create-audiobook.md  densify.md  diagram.md  doc.md  draft-reply.md  error.md  evaluate-architecture.md  g1.md  g3.md  generate-card.md  generate-delivery-email.md  generate-tool-configs.md  hatch.md  i.md  infer-audience.md  kids-story.md  log-meeting.md  mcb.md  memo.md  n.md  name-project.md  netcheck.md  new-idea.md  ollama-agent.md  (+28 more)
docs/: asset-feedback-hooks.md  build-quality-audit-pdf.py  code-review-analysis.md  vscode-web-patterns-research.md
docs/core/: CONFIRMATION_PROTOCOL.md  SKILL_INVOCATION.md
docs/diagrams/: architecture-org-chart.drawio
docs/patterns/: CHILD_PROCESSES.md  COMPONENT_DECOMPOSITION.md  COMPOSABLE_AI.md  RESUME.md  ROUTER_AGENT_STRATEGY.md
docs/processes/: DEVICE_PREVIEW_SOP.md  DIVERGENT_MODE.md  DOMAIN_MODEL_SDLC_SOP.md  DOMAIN_MODEL_SOP.md  INFRA_SRE_AGENT.md  LAMBDA_TROUBLESHOOTING_AGENT.md  LICENSE_AUDITOR_AGENT.md  MAINTENANCE_TRIAGE.md  MIGRATION_SPECIALIST_AGENT.md  PHASE_2_RESEARCH.md  PHASE_3_EXPANSION.md  PHASE_4_ANALYSIS.md  PHASE_5_SELECTION.md  PHASE_6_DESIGN.md  PHASE_7_TEST_DESIGN.md  PHASE_8_IMPLEMENTATION.md  RELEASE_VERIFICATION_AGENT.md  SHARED_WORKFLOW.md
docs/reference/: ARTIFACT_PERMISSIONS.md  AUTO_SYNC_MAIN.md  AWS_ACCOUNT_GUARD.md  AWS_SECRETS.md  CONTEXT_SNAPSHOT_PATTERN.md  CONTEXT_SNAPSHOT_SUMMARY.md  DEFAULT_LLM.md  ENFORCEMENT.md  GITLAB_MCP_SETUP.md  GIT_WORKFLOW.md  HEURISTICS.md  IMPLEMENTATION_STRATEGY.md  PUBLISHING_STRATEGIES.md  REFERENCE_EXAMPLES.md  S3_PUBLISHING.md  SETTINGS_GUIDE.md  SLASH_COMMANDS.md  UAT_FRAMEWORK.md  UX_IA_AUDIT_CRITERIA.md  VALUE_PROPOSITIONS.md
examples/: proposal-microsite-template.html
guardrails/: README.md  design-system-rules.md
guardrails/ai-steering/: ARCHITECTURE_DIAGRAM.html  HOOK_BASED_ENFORCEMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  README_PERIODIC_VALIDATION.md  SUPERVISOR_PATTERN.md  TESTING_GUIDE.md  batch_detector.py  phase_checker.py  requirements.txt  response_format_validator.py  rule_engine.py  schema.json  smart_autofix.py
guardrails/architecture-preferences/: design-patterns.json  integration-patterns.json  process-patterns.json
guardrails/tech-preferences/: README.md  ai-ml.json  backend.json  cli-tools-react-ink.md  data-viz.json  (+5 more)
hmode/: .gitignore  CLAUDE.md
hmode/shared/golden-repos/python-script/: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml
hmode/shared/golden-repos/python-script/src/: config.py  logging_config.py
hmode/shared/libs/vectorstore-unified/python/: README.md  pyproject.toml
hmode/shared/libs/vectorstore-unified/python/tests/: conftest.py  test_embeddings.py
hmode/shared/libs/vectorstore-unified/python/vectorstore_unified/: __init__.py  store.py
hmode/shared/libs/vectorstore-unified/python/vectorstore_unified/backends/: s3_vectors.py
hmode/shared/libs/vectorstore-unified/python/vectorstore_unified/embeddings/: cohere.py
hmode/shared/semantic/domains/cli/: pyproject.toml
hmode/shared/semantic/domains/cli/docs/: ANALYSIS.md  EXPANSION.md  SEED.md  SELECTION.md  TEST_DESIGN.md
hmode/shared/semantic/domains/cli/domain_cli/: cli.py
hmode/shared/semantic/domains/cli/domain_cli/commands/: list_cmd.py  search.py  validate.py
hmode/shared/semantic/domains/cli/tests/: conftest.py
quickview-tool/: .env.example  .gitignore  CLAUDE.md  README.md  TEST_PLAN.md  artifact-sidebar-mock1-pin-rail.html  artifact-sidebar-mock2-top-menu.html  artifact-sidebar-mock3-hover-expand.html  artifact-sidebar-mock4-command-palette.html  artifact-sidebar-mock5-resizable.html  index.html  package-lock.json  package.json  playwright.config.js  server.js  tsconfig.app.json  tsconfig.json
shared/golden-repos/python-cli/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
shared/golden-repos/python-cli/docs/api-reference/: overview.mdx
shared/golden-repos/python-cli/src/commands/: greet.py
shared/golden-repos/python-fastapi/: .env.example  Makefile  mkdocs.yml  pyproject.toml
shared/golden-repos/python-fastapi/docs/: index.md
shared/golden-repos/python-fastapi/src/: config.py  logging_config.py  middleware.py  models.py
shared/golden-repos/python-fastapi/src/routers/: items.py
shared/golden-repos/python-fastapi/tests/: test_health.py
shared/golden-repos/python-general/: .env.example  pyproject.toml
shared/golden-repos/python-general/src/mylib/: __init__.py  config.py  core.py  utils.py
shared/golden-repos/python-general/tests/: test_core.py
shared/golden-repos/typescript-serverless-starter/backend-python/: pyproject.toml  requirements.txt
shared/golden-repos/typescript-serverless-starter/backend-python/src/handlers/: bedrock_handler.py
shared/golden-repos/typescript-serverless-starter/backend-python/src/lib/: secrets.py
shared/golden-repos/typescript-serverless-starter/backend-python/src/models/: requests.py
skills/: add-shared-tool.md  ask-human.md  cleanup.md  plan-project.md  pre-code-gate.md  quality-control.md  security-audit-agent.md  security-scan.md  send-email.md  swimlane-diagram.md  tts.md
templates/: author-info.md  aws-sa-disclaimer-xip.md
(+1358 files in other folders)
