[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serverless-backend-python"
version = "1.0.0"
description = "Python Lambda backend with Powertools, Bedrock, and Pydantic"
requires-python = ">=3.11"
dependencies = [
    "aws-lambda-powertools[all]>=3.0.0",
    "pydantic>=2.5.0",
    "boto3>=1.35.0",
    "aws-xray-sdk>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "moto[all]>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "boto3-stubs[bedrock-runtime,secretsmanager,dynamodb]>=1.35.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
