[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorstore-unified"
version = "0.1.0"
description = "Unified VectorStore - Pinecone-like API with Algolia-style text search"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Hopper Labs" }
]
keywords = ["vector", "embeddings", "search", "s3", "pgvector", "opensearch", "bedrock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "boto3>=1.34.0",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.34.0",
]
openai = [
    "openai>=1.0.0",
]
cohere = [
    "cohere>=4.0.0",
]
pgvector = [
    "psycopg[binary]>=3.0.0",
    "pgvector>=0.2.0",
]
opensearch = [
    "opensearch-py>=2.0.0",
    "requests-aws4auth>=1.0.0",
]
all = [
    "boto3>=1.34.0",
    "openai>=1.0.0",
    "cohere>=4.0.0",
    "psycopg[binary]>=3.0.0",
    "pgvector>=0.2.0",
    "opensearch-py>=2.0.0",
    "requests-aws4auth>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "moto>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hopperlabs/vectorstore-unified"
Documentation = "https://github.com/hopperlabs/vectorstore-unified#readme"

[tool.hatch.build.targets.wheel]
packages = ["vectorstore_unified"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
